# slim-atlas-ai

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Cargo.toml  DESIGN.md  Dockerfile  LICENSE  PLAN_PHASE_1.md  README.md  config.toml  deno.json  mcp_client.py  package-lock.json  package.json  test_client.py  tsconfig.build.json  tsconfig.json
.opencode/: opencode.jsonc
archive/slim-atlas/: README.md
deno/: deno.json  dom_shim.ts  render.ts
docs/: configs.md
scripts/: mcp_client.py  pyproject.toml  test-mcp.ts  test-server.ts  verify_click.py  verify_wire.py
src/: bot-detection.ts  browser-tools.ts  browser.ts  browserbase-pool.ts  chrome-pool.ts  chrome.ts  cli-args.ts  cloud-browser-service.ts  config.rs  error.rs  headful-chrome-pool.ts  history.ts  index.ts  lib.rs  logger.ts  main.rs  memory.rs  pool.ts  rate-limit.ts  server.ts  session.ts  snapshot-utils.ts  state.rs  stealth.ts  types.ts  xvfb.ts
src/deno/: framework.rs  mod.rs  renderer.rs
src/deno_runtime/: install.rs  mod.rs  pool.rs  protocol.rs  worker.rs
src/mcp/: mod.rs  server.rs  tools.rs
src/router/: classifier.rs  escalator.rs  mod.rs  navigation.rs
src/session/: cookie.rs  id.rs  mod.rs  store.rs
src/tiers/: mod.rs  tier1_http.rs
src/utils/: html.rs  mod.rs
test/: cli-args.test.ts  integration.test.ts  mcp.test.ts  pool-args.test.ts  rate-limit.test.ts  server.test.ts
tests/: deno_runtime_integration.rs  integration.rs  tier2_render_integration.rs
